tests/paczka1/fuzzy1/66143633.err
Error in line 2: u38b A844 89,8
Error in line 11: S775 A898 -2,2
Error in line 12: gHr S775 72,9
Error in line 5: CcVLkaK A42 10,9
Error in line 23: jmp0o7t A42 -1,1
Error in line 10: S775 A898 92,2
Error in line 28: gHr A42 54,5
Error in line 35: CcVLkaK S775 49,9
Error in line 37: CcVLkaK A844 5,2
